==> u-blox/ubxlib/port/platform/nrf5sdk/src/u_port_i2c.c <==
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "string.h"  // memset()
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_i2c.h"
#include "u_port_private.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "nrf.h"
#include "nrf_gpio.h"  // For bus recovery
#include "nrfx_twim.h"
# define U_PORT_I2C_MAX_NUM 2

static int32_t openI2c(int32_t i2c, int32_t pinSda, int32_t pinSdc,
                       bool controller, bool adopt)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_twim_t instance = {0};
    nrfx_twim_config_t cfg = NRFX_TWIM_DEFAULT_CONFIG;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((i2c >= 0) && (i2c < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[i2c].instance.p_twim == NULL) && controller &&
            (adopt || ((pinSda >= 0) && (pinSdc >= 0)))) {
            handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            switch (i2c) {
                case 0:
#if NRFX_TWIM0_ENABLED
                    instance.p_twim       = NRF_TWIM0;
                    instance.drv_inst_idx = NRFX_TWIM0_INST_IDX;
#endif
                    break;
                case 1:
#if NRFX_TWIM1_ENABLED
                    instance.p_twim       = NRF_TWIM1;
                    instance.drv_inst_idx = NRFX_TWIM1_INST_IDX;
#endif
                    break;
                default:
                    break;
            }
            if (instance.p_twim != NULL) {
                handleOrErrorCode = uPortSemaphoreCreate(&(gI2cData[i2c].completionSemaphore), 0, 1);
                if (handleOrErrorCode == 0) {
                    cfg.scl = pinSdc;
                    cfg.sda = pinSda;
                    cfg.frequency = clockHertzToEnum(U_PORT_I2C_CLOCK_FREQUENCY_HERTZ);
                    if (adopt ||
                        (nrfx_twim_init(&instance, &cfg, eventHandlerIrq, &(gI2cData[i2c])) == NRFX_SUCCESS)) {
                        gI2cData[i2c].clockHertz = U_PORT_I2C_CLOCK_FREQUENCY_HERTZ;
                        gI2cData[i2c].timeoutMs = U_PORT_I2C_TIMEOUT_MILLISECONDS;
                        gI2cData[i2c].pinSda = pinSda;
                        gI2cData[i2c].pinSdc = pinSdc;
                        gI2cData[i2c].adopted = adopt;
                        gI2cData[i2c].instance = instance;
                        // Return the I2C HW block number as the handle
                        handleOrErrorCode = i2c;
                    }
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortI2cCloseRecoverBus(int32_t handle)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    int32_t pinSda;
    int32_t pinSdc;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].instance.p_twim != NULL)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                pinSda = gI2cData[handle].pinSda;
                pinSdc = gI2cData[handle].pinSdc;
                closeI2c(&(gI2cData[handle]));
                errorCode = busRecover(pinSda, pinSdc);
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortI2cSetClock(int32_t handle, int32_t clockHertz)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    int32_t clockEnumValue = clockHertzToEnum(clockHertz);

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].instance.p_twim != NULL) && (clockEnumValue >= 0)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                nrf_twim_frequency_set(gI2cData[handle].instance.p_twim, clockEnumValue);
                gI2cData[handle].clockHertz = clockHertz;
                errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortI2cControllerSendReceive(int32_t handle, uint16_t address,
                                      const char *pSend, size_t bytesToSend,
                                      char *pReceive, size_t bytesToReceive)
{
    int32_t errorCodeOrLength = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_twim_xfer_desc_t xferDescription = {0};

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCodeOrLength = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].instance.p_twim != NULL) &&
            ((pSend != NULL) || (bytesToSend == 0)) &&
            ((pReceive != NULL) || (bytesToReceive == 0))) {
            errorCodeOrLength = (int32_t) U_ERROR_COMMON_SUCCESS;
            nrfx_twim_enable(&(gI2cData[handle].instance));
            if (pSend != NULL) {
                xferDescription.type = NRFX_TWIM_XFER_TX;
                xferDescription.address = (uint8_t) address;
                xferDescription.primary_length = bytesToSend;
                xferDescription.p_primary_buf = (uint8_t *) pSend;
                // Make sure the semaphore is empty
                uPortSemaphoreTryTake(gI2cData[handle].completionSemaphore, 0);
                gI2cData[handle].xferErrorCode = (int32_t) U_ERROR_COMMON_UNKNOWN;
                if (nrfx_twim_xfer(&(gI2cData[handle].instance),
                                   &xferDescription, 0) == NRFX_SUCCESS) {
                    // Wait for the event handler to give the semaphore
                    errorCodeOrLength = uPortSemaphoreTryTake(gI2cData[handle].completionSemaphore,
                                                              gI2cData[handle].timeoutMs * bytesToSend);
                    if (errorCodeOrLength == 0) {
                        errorCodeOrLength = gI2cData[handle].xferErrorCode;
                    }
                }
            }
            if ((errorCodeOrLength == (int32_t) U_ERROR_COMMON_SUCCESS) &&
                (pReceive != NULL)) {
                xferDescription.type = NRFX_TWIM_XFER_RX;
                xferDescription.address = (uint8_t) address;
                xferDescription.primary_length = bytesToReceive;
                xferDescription.p_primary_buf = (uint8_t *) pReceive;
                // Make sure the semaphore is empty
                uPortSemaphoreTryTake(gI2cData[handle].completionSemaphore, 0);
                gI2cData[handle].xferErrorCode = (int32_t) U_ERROR_COMMON_UNKNOWN;
                if (nrfx_twim_xfer(&(gI2cData[handle].instance),
                                   &xferDescription, 0) == NRFX_SUCCESS) {
                    // Wait for the event handler to give the semaphore
                    errorCodeOrLength = uPortSemaphoreTryTake(gI2cData[handle].completionSemaphore,
                                                              gI2cData[handle].timeoutMs * bytesToReceive);
                    if (errorCodeOrLength == 0) {
                        errorCodeOrLength = gI2cData[handle].xferErrorCode;
                        if (errorCodeOrLength == 0) {
                            errorCodeOrLength = (int32_t) bytesToReceive;
                        }
                    }
                }
            }
            nrfx_twim_disable(&(gI2cData[handle].instance));
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCodeOrLength;
}

int32_t uPortI2cControllerSend(int32_t handle, uint16_t address,
                               const char *pSend, size_t bytesToSend,
                               bool noStop)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    nrfx_twim_xfer_desc_t xferDescription = {0};
    uint32_t flags = 0;
    char emptyBuffer = 0;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].instance.p_twim != NULL) &&
            ((pSend != NULL) || (bytesToSend == 0))) {
            errorCode = (int32_t) U_ERROR_COMMON_DEVICE_ERROR;
            nrfx_twim_enable(&(gI2cData[handle].instance));
            xferDescription.type = NRFX_TWIM_XFER_TX;
            xferDescription.address = (uint8_t) address;
            xferDescription.primary_length = bytesToSend;
            if (pSend == NULL) {
                // If pSend is NULL this fails the NRFSDK check that
                // the buffer is in RAM, so assign an empty buffer to
                // it here, then the user can still do a "scan" for addresses
                // present on the bus using a NULL buffer
                pSend = &emptyBuffer;
                // Also, from this Nordic support question:
                // https://devzone.nordicsemi.com/f/nordic-q-a/37665/twim-clock-pin-is-pull-low-after-sending-zero-bytes-data
                // it is clear that the nrfx_twim_xfer() function does not support
                // sending zero bytes of data: the STOP signal will never be sent
                // as it is shorted to the LAST_TX event and with no TX that will
                // never happen.
            }
            xferDescription.p_primary_buf = (uint8_t *) pSend;
            if (noStop) {
                flags |= NRFX_TWIM_FLAG_TX_NO_STOP;
            }
            // Make sure the semaphore is empty
            uPortSemaphoreTryTake(gI2cData[handle].completionSemaphore, 0);
            gI2cData[handle].xferErrorCode = (int32_t) U_ERROR_COMMON_UNKNOWN;
            if (nrfx_twim_xfer(&(gI2cData[handle].instance),
                               &xferDescription, flags) == NRFX_SUCCESS) {
                // Wait for the event handler to give the semaphore,
                // +1 below to make sure we at least wait a little while,
                // since bytesToSend might be zero
                errorCode = uPortSemaphoreTryTake(gI2cData[handle].completionSemaphore,
                                                  gI2cData[handle].timeoutMs * (bytesToSend + 1));
                if (errorCode == 0) {
                    errorCode = gI2cData[handle].xferErrorCode;
                }
            }
            nrfx_twim_disable(&(gI2cData[handle].instance));
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}
