==> u-blox/ubxlib/port/platform/zephyr/src/u_port_i2c.c <==
#include <zephyr/types.h>
#include <zephyr.h>
#include <drivers/i2c.h>
#include <device.h>
#include <soc.h>
#include "stddef.h"
#include "stdint.h"
#include "stdbool.h"
#include "u_error_common.h"
#include "u_port.h"
#include "u_port_os.h"
#include "u_port_i2c.h"
#include "version.h"
# define U_PORT_I2C_MAX_NUM 2
# define I2C_MODE_CONTROLLER I2C_MODE_MASTER

static int32_t openI2c(int32_t i2c, int32_t pinSda, int32_t pinSdc,
                       bool controller, bool adopt)
{
    int32_t handleOrErrorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice = NULL;
    uint32_t i2cDeviceCfg;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        // On Zephyr the pins are set at compile time so those passed
        // into here must be non-valid
        if ((i2c >= 0) && (i2c < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[i2c].pDevice == NULL) && controller &&
            (pinSda < 0) && (pinSdc < 0)) {
            handleOrErrorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
            switch (i2c) {
                case 0:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("I2C_0");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(i2c0));
#endif
                    break;
                case 1:
#if KERNEL_VERSION_MAJOR < 3
                    pDevice = device_get_binding("I2C_1");
#else
                    pDevice = DEVICE_DT_GET_OR_NULL(DT_NODELABEL(i2c1));
#endif
                    break;
                default:
                    break;
            }
            i2cDeviceCfg = I2C_SPEED_SET(clockHertzToIndex(U_PORT_I2C_CLOCK_FREQUENCY_HERTZ)) |
                           I2C_MODE_CONTROLLER;
            if ((pDevice != NULL) &&
                (!adopt || (i2c_configure(pDevice, i2cDeviceCfg) == 0))) {
                gI2cData[i2c].clockHertz = U_PORT_I2C_CLOCK_FREQUENCY_HERTZ;
                // Hook the device data structure into the entry
                // to flag that it is in use
                gI2cData[i2c].pDevice = pDevice;
                gI2cData[i2c].adopted = adopt;
                // Return the I2C HW block number as the handle
                handleOrErrorCode = i2c;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return handleOrErrorCode;
}

int32_t uPortI2cCloseRecoverBus(int32_t handle)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice = NULL;
    int32_t x;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].pDevice != NULL)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                pDevice = gI2cData[handle].pDevice;
                // Mark the device as closed; adopt is not a factor
                // here, we've been asked to fiddle
                gI2cData[handle].pDevice = NULL;
                x = i2c_recover_bus(pDevice);
                if (x == -ENOSYS) {
                    errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
                } else if (x == 0) {
                    errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortI2cSetClock(int32_t handle, int32_t clockHertz)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice = NULL;
    uint32_t i2cDeviceCfg;
    int32_t clockIndex = clockHertzToIndex(clockHertz);

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].pDevice != NULL) && (clockIndex >= 0)) {
            errorCode = (int32_t) U_ERROR_COMMON_NOT_SUPPORTED;
            if (!gI2cData[handle].adopted) {
                pDevice = gI2cData[handle].pDevice;
                i2cDeviceCfg = I2C_SPEED_SET(clockIndex) | I2C_MODE_CONTROLLER;
                errorCode = (int32_t) U_ERROR_COMMON_PLATFORM;
                if (i2c_configure(pDevice, i2cDeviceCfg) == 0) {
                    gI2cData[handle].clockHertz = clockHertz;
                    errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
                }
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}

int32_t uPortI2cControllerSendReceive(int32_t handle, uint16_t address,
                                      const char *pSend, size_t bytesToSend,
                                      char *pReceive, size_t bytesToReceive)
{
    int32_t errorCodeOrLength = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice = NULL;
    struct i2c_msg message[2];
    size_t x = 0;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCodeOrLength = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].pDevice != NULL) &&
            ((pSend != NULL) || (bytesToSend == 0)) &&
            ((pReceive != NULL) || (bytesToReceive == 0))) {
            pDevice = gI2cData[handle].pDevice;
            errorCodeOrLength = (int32_t) U_ERROR_COMMON_DEVICE_ERROR;
            if (pSend != NULL) {
                message[x].buf = (uint8_t *) pSend;
                message[x].len = (uint32_t) bytesToSend;
                message[x].flags = I2C_MSG_WRITE;
                if (address > 127) {
                    message[x].flags |= I2C_MSG_ADDR_10_BITS;
                }
                if (pReceive == NULL) {
                    // If there's nothing to receive then add a stop marker
                    // at the end of the message
                    message[x].flags |= I2C_MSG_STOP;
                }
                x++;
            }
            if (pReceive != NULL) {
                message[x].buf = (uint8_t *) pReceive;
                message[x].len = (uint32_t) bytesToReceive;
                // We're definitely stopping after this message
                message[x].flags = I2C_MSG_READ | I2C_MSG_STOP;
                if (address > 127) {
                    message[x].flags |= I2C_MSG_ADDR_10_BITS;
                }
                // If something was sent, make sure that there is
                // a start marker at the front of the message
                if (pSend != NULL) {
                    message[x].flags |= I2C_MSG_RESTART;
                }
                x++;
            }
            if (i2c_transfer(pDevice, message, x, address) == 0) {
                errorCodeOrLength = (int32_t) bytesToReceive;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCodeOrLength;
}

int32_t uPortI2cControllerSend(int32_t handle, uint16_t address,
                               const char *pSend, size_t bytesToSend,
                               bool noStop)
{
    int32_t errorCode = (int32_t) U_ERROR_COMMON_NOT_INITIALISED;
    const struct device *pDevice = NULL;
    struct i2c_msg message;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        errorCode = (int32_t) U_ERROR_COMMON_INVALID_PARAMETER;
        if ((handle >= 0) && (handle < sizeof(gI2cData) / sizeof(gI2cData[0])) &&
            (gI2cData[handle].pDevice != NULL) &&
            ((pSend != NULL) || (bytesToSend == 0))) {
            pDevice = gI2cData[handle].pDevice;
            errorCode = (int32_t) U_ERROR_COMMON_DEVICE_ERROR;
            message.buf = (uint8_t *) pSend;
            message.len = (uint32_t) bytesToSend;
            message.flags = I2C_MSG_WRITE;
            if (address > 127) {
                message.flags |= I2C_MSG_ADDR_10_BITS;
            }
            if (!noStop) {
                message.flags |= I2C_MSG_STOP;
            }
            if (i2c_transfer(pDevice, &message, 1, address) == 0) {
                errorCode = (int32_t) U_ERROR_COMMON_SUCCESS;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return errorCode;
}
